Fix color contrast of CTA, this fixes #42

--- a/src/assets/sass/_vars.scss
+++ b/src/assets/sass/_vars.scss
@@ -27,7 +27,7 @@ $palettes: (
     // WEB
     text: #231f20,
   // WMN Text Black
-    cta: #1d7ec4,
+    cta: #1D7BBF,
   // WMN CTA Blue
     error: #d4351c,
   warning: #cc6900,
